# prjunnamed

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE-0BSD.txt  README.md  deny.toml
.github/workflows/: ci.yml
api/: crates.js  help.html  search-index.js  settings.html  src-files.js
api/prjunnamed_generic/: all.html  fn.canonicalize.html  fn.decision.html  fn.iobuf_insert.html  fn.lower_arith.html  fn.unname.html  index.html  sidebar-items.js
api/prjunnamed_generic/decision/: fn.decision.html
api/prjunnamed_generic/iobuf_insert/: fn.iobuf_insert.html
api/prjunnamed_generic/lower_arith/: fn.lower_arith.html
api/prjunnamed_generic/unname/: fn.unname.html
api/prjunnamed_lut/: all.html  index.html  struct.Lut.html
api/prjunnamed_memory/: all.html  index.html  sidebar-items.js  struct.MemorySwizzle.html  trait.MemoryExt.html
api/prjunnamed_netlist/: all.html  enum.Cell.html  enum.ControlNet.html  enum.MemoryPortRelation.html  enum.MetaItem.html  enum.NotIsomorphic.html  enum.ParamValue.html  enum.SmtResponse.html  enum.TargetCellImportError.html  enum.TargetCellPurity.html  enum.TargetParamKind.html  enum.Trit.html  fn.create_target.html  fn.isomorphic.html  fn.parse.html  fn.register_target.html  index.html  macro.assert_isomorphic!.html  macro.assert_isomorphic.html  sidebar-items.js  struct.AssignCell.html  struct.CellRef.html  struct.Const.html  struct.Design.html  struct.FlipFlop.html  struct.Instance.html  struct.IoBuffer.html  struct.IoNet.html  struct.IoValue.html  struct.MatchCell.html  struct.Memory.html  struct.MemoryReadFlipFlop.html  struct.MemoryReadPort.html  struct.MemoryWritePort.html  struct.MetaItemRef.html  struct.MetaStringRef.html  struct.Net.html  struct.ParseError.html  struct.TargetCell.html  struct.TargetImportError.html  (+8 more)
api/prjunnamed_netlist/cell/: enum.Cell.html
api/prjunnamed_netlist/design/: struct.CellRef.html  struct.Design.html
api/prjunnamed_netlist/io/: struct.IoNet.html  struct.IoValue.html
api/prjunnamed_netlist/isomorphic/: enum.NotIsomorphic.html  fn.isomorphic.html
api/prjunnamed_netlist/logic/: enum.Trit.html  struct.Const.html
api/prjunnamed_pattern/: all.html  index.html  macro.assert_netlist!.html  macro.assert_netlist.html  macro.netlist_match!.html  macro.netlist_match.html  macro.netlist_replace!.html  macro.netlist_replace.html  sidebar-items.js  struct.CellCollector.html  trait.DesignDyn.html  trait.NetOrValue.html  trait.Pattern.html
api/prjunnamed_siliconblue/: all.html  constant.SB_CARRY.html  constant.SB_DFF.html  constant.SB_GB.html  constant.SB_IO.html  constant.SB_LUT4.html  constant.SB_LUT4_CARRY.html  constant.SB_MAC16.html  constant.SB_PLL40.html  constant.SB_RAM40_4K.html  constant.SB_SPRAM256KA.html  fn.register.html  index.html  sidebar-items.js  struct.SiliconBlueTarget.html
api/prjunnamed_yosys_json/: all.html  index.html  sidebar-items.js
book/: 404.html  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
book/dev/: langref.html
cli/: Cargo.toml  build.rs
cli/src/: main.rs
docs/: book.toml
docs/src/: SUMMARY.md  intro.md
docs/src/dev/: langref.md
examples/: blinky.json
generic/: Cargo.toml
generic/src/: combine.rs  decision.rs  iob_insert.rs  iobuf_insert.rs  lib.rs  lower.rs  lower_arith.rs  lower_memory.rs  merge.rs  simplify.rs  split.rs  unname.rs
lut/: Cargo.toml
lut/src/: lib.rs
memory/: Cargo.toml
memory/src/: lib.rs
memory/tests/: emulate_read_before_write.rs  extract_read_ports.rs  lower_fallback.rs  swizzle.rs  unmap_read_dff.rs  unmap_read_init_reset_transparency.rs
netlist/: Cargo.toml
netlist/src/: builder.rs  cell.rs  design.rs  io.rs  isomorphic.rs  lib.rs  logic.rs  metadata.rs  net.rs  param.rs  parse.rs  print.rs  smt.rs  target.rs  value.rs
netlist/src/cell/: decision.rs  flip_flop.rs  instance.rs  io_buffer.rs  memory.rs  mod.rs  target.rs
netlist/src/smt/: easy_smt.rs
netlist/tests/: roundtrip.rs  smt.rs
pass/: Cargo.toml
pass/src/: combine.rs  lib.rs  replacer.rs
pattern/: Cargo.toml
pattern/src/: arithmetic.rs  bitwise.rs  generic.rs  lib.rs  shift.rs  simple.rs  traits.rs
siliconblue/: Cargo.toml
siliconblue/src/: lib.rs  memory.rs
siliconblue/tests/: export.rs  lower_ffs.rs  lower_iobs.rs  lower_iobufs.rs
smt2/: Cargo.toml
smt2/src/: lib.rs
yosys_json/: Cargo.toml
yosys_json/src/: export.rs  import.rs  lib.rs  yosys.rs
(+181 files in other folders)
