[workspace]
resolver = "3"
members = [
    "netlist",
    "pattern",
    "generic",
    "smt2",
    "yosys_json",
    "cli", "siliconblue", "lut",
]

[workspace.dependencies]
prjunnamed-netlist.path = "netlist"
prjunnamed-pattern.path = "pattern"
prjunnamed-generic.path = "generic"
prjunnamed-lut.path = "lut"
prjunnamed-smt2.path = "smt2"
prjunnamed-yosys_json.path = "yosys_json"
prjunnamed-siliconblue.path = "siliconblue"
yap = "0.12.0"
easy-smt = "0.2"
env_logger = "0.11"
argparse = "0.2"
json = "0.12"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "0BSD OR Apache-2.0"
repository = "https://github.com/prjunnamed/prjunnamed"
authors = []
