[workspace]
resolver = "3"
members = [
    "netlist",
    "pattern",
    "generic",
    "lut",
    "memory",
    "yosys_json",
    "siliconblue",
    "cli",
]

[workspace.dependencies]
prjunnamed-netlist.path = "netlist"
prjunnamed-pattern.path = "pattern"
prjunnamed-generic.path = "generic"
prjunnamed-lut.path = "lut"
prjunnamed-memory.path = "memory"
prjunnamed-yosys_json.path = "yosys_json"
prjunnamed-siliconblue.path = "siliconblue"
indexmap = "2.7.1"
yap = "0.12.0"
# easy-smt = "0.2.7"
easy-smt = { git = "https://github.com/whitequark/easy-smt", branch = "buf-writer" }
env_logger = "0.11"
argparse = "0.2"
jzon = "0.12.5"
union-find-rs = "0.2.1"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "0BSD OR Apache-2.0"
repository = "https://github.com/prjunnamed/prjunnamed"
authors = []
