[package]
name = "prjunnamed-generic"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
doctest = false

[dependencies]
prjunnamed-netlist.workspace = true
prjunnamed-pattern.workspace = true
prjunnamed-smt2.workspace = true

[features]
trace = []
