[package]
name = "prjunnamed-siliconblue"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
doctest = false

[dependencies]
prjunnamed-netlist.workspace = true
prjunnamed-generic.workspace = true
prjunnamed-lut.workspace = true
prjunnamed-memory.workspace = true
